Fixing alignement

--- a/src/MainScreen/Features/Calendar/calendarComp.css
+++ b/src/MainScreen/Features/Calendar/calendarComp.css
@@ -6,6 +6,7 @@
 }
 
 .Appointments-header {
+    background-color: blueviolet;
     display: flex;
     flex-direction: column;
     font-size: large;
@@ -14,7 +15,7 @@
 .Appointments-button {
     display: flex;
     padding: 20px;
-    padding-bottom: 200px;
+    
 }
 
 .Note-header {
@@ -27,11 +28,13 @@
 .Note-button {
     display: flex;
     padding: 20px;
+    padding-top: 200px;
 }
 .buttons {
+    background-color: lightcoral;
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .react-calendar {
